--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,3 +50,40 @@ ul.ul-style > li {
     transform: translateX(-100%);
   }
 }
+
+.swiper {
+  width: 100%;
+  max-height: 520px;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fcfcfd;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-pagination-bullet-active {
+  background: #f57f20 !important;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 2rem;
+}
+
+.grid-item {
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 4;
+  background-image: url("../app/assets/icons/service-card-bg.svg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 100% 100%;
+}
