feat: build contact pop up form

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,9 +60,7 @@ ul.ul-style > li {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fcfcfd;
-
-  /* Center slide text vertically */
+  /* background: ; */
   display: flex;
   justify-content: center;
   align-items: center;
